feat(WP-5): 工具契约与基础设施（基类/绑定/Griefing/权限/装配）